--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,17 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   firebase_core: ^3.13.0
+ 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,6 +73,10 @@ flutter:
     - family: rushfordclean
       fonts:
         - asset: assets/fonts/Rushfordclean-rgz89.otf
+    - family: springegg
+      fonts:
+        - asset: assets/fonts/Springegg.ttf
+      
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
